k8s/apps/wodore/apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wd-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: wd-frontend
