k8s/apps/wodore/apps/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wd-frontend
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_ISSUER_PROD}
spec:
  rules:
    - host: ${ENV_SUBDOMAIN}${WODORE_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wd-frontend
                port:
                  number: 80
    - host: ${ENV_SUBDOMAIN}${WODO_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wd-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - ${ENV_SUBDOMAIN}${WODORE_HOST}
        - ${ENV_SUBDOMAIN}${WODO_HOST}
      secretName: wd-frontend-tls
